# ais-uploader

./: Cargo.toml  Dockerfile  License.md  flake.nix  readme.md
nix/: ais-uploader.nix
src/: ais_reformatter.rs  main.rs  upload.rs
src/listener/: mod.rs  tcp.rs  udp.rs
